# smart-downscaler

./: Cargo.toml  README.md  build-wasm-simple.sh  build-wasm.sh
benches/: downscale_bench.rs
examples/: demo.html
js/: smart-downscaler.d.ts  smart-downscaler.js
src/: color.rs  downscale.rs  edge.rs  fast.rs  hierarchy.rs  lib.rs  palette.rs  preprocess.rs  rare_color_pipeline.rs  slic.rs  wasm.rs
